--- a/app/src/main/res/layout/activity_doc_main.xml
+++ b/app/src/main/res/layout/activity_doc_main.xml
@@ -7,15 +7,11 @@
     tools:context=".docMain">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar6"
-        android:layout_width="410dp"
+        android:id="@+id/toolbar8"
+        android:layout_width="0dp"
         android:layout_height="66dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginLeft="1dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginRight="1dp"
         android:layout_marginBottom="668dp"
-        android:background="#CC2F2F"
+        android:background="@color/colorPrimary"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -24,23 +20,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/imageView8"
-        android:layout_width="58dp"
-        android:layout_height="64dp"
-        app:srcCompat="@drawable/abc_vector_test"
-        tools:ignore="MissingConstraints" />
-
     <LinearLayout
         android:id="@+id/linearLayout4"
-        android:layout_width="410dp"
+        android:layout_width="0dp"
         android:layout_height="104dp"
-        android:layout_marginBottom="561dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="58dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="50dp"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar6">
+        app:layout_constraintTop_toBottomOf="@+id/toolbar8">
 
         <ImageView
             android:id="@+id/imageView10"
@@ -56,14 +48,15 @@
             android:layout_margin="10dp"
             android:layout_weight="3"
             android:gravity="center_vertical"
-            android:text="doctorid"
+            android:text="Doctor ID - "
             android:textSize="24sp" />
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout7"
         android:layout_width="411dp"
         android:layout_height="294dp"
-        android:layout_marginTop="78dp"
+        android:layout_marginTop="35dp"
         android:layout_marginBottom="189dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -75,9 +68,9 @@
             android:id="@+id/button10"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="20dp"
             android:layout_weight="1"
-            android:background="#CC2F2F"
+            android:background="@color/colorPrimary"
             android:text="View Account Details"
             android:textColor="#FFFFFF"
             android:textSize="18sp" />
@@ -86,9 +79,9 @@
             android:id="@+id/button12"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="20dp"
             android:layout_weight="1"
-            android:background="#CC2F2F"
+            android:background="@color/colorPrimary"
             android:text="Edit Account Details"
             android:textColor="#FFFFFF"
             android:textSize="18sp" />
@@ -97,9 +90,9 @@
             android:id="@+id/button13"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="20dp"
             android:layout_weight="1"
-            android:background="#CC2F2F"
+            android:background="@color/colorPrimary"
             android:text="Delete Account"
             android:textColor="#FFFFFF"
             android:textSize="18sp" />
