--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -9,9 +9,15 @@
     <LinearLayout
         android:layout_width="408dp"
         android:layout_height="520dp"
+        android:layout_marginStart="3dp"
+        android:layout_marginLeft="3dp"
+        android:layout_marginTop="99dp"
+        android:layout_marginBottom="112dp"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="3dp"
-        tools:layout_editor_absoluteY="99dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/textView"
@@ -21,14 +27,15 @@
             android:layout_weight="1"
             android:gravity="center_horizontal|center_vertical"
             android:text="Welcome Back"
-            android:textColor="#CC2F2F"
+            android:textColor="@color/colorPrimary"
             android:textSize="36sp" />
 
         <EditText
-            android:id="@+id/editTextTextPersonName4"
+            android:id="@+id/username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
             android:layout_weight="1"
             android:ems="10"
             android:gravity="bottom"
@@ -37,27 +44,39 @@
             android:textSize="24sp" />
 
         <EditText
-            android:id="@+id/editTextTextPersonName5"
+            android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
             android:layout_weight="1"
             android:ems="10"
             android:gravity="bottom"
             android:hint="Password"
-            android:inputType="textPersonName"
+            android:inputType="textPassword"
             android:textSize="24sp" />
 
         <Button
             android:id="@+id/button"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="50dp"
+            android:layout_height="10dp"
+            android:layout_marginLeft="90dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginRight="90dp"
+            android:layout_marginBottom="30dp"
             android:layout_weight="1"
-            android:background="#CC2F2F"
+            android:background="@color/colorPrimary"
             android:text="Continue"
             android:textColor="#FFFFFF"
             android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/textView16"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:text="Forgot your username / password" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
